[package]
name = "genpasswd"
version = "0.1.0"
edition = "2021"

author = "PsychedelicShayna"
description = "A simple password generator that ensures characters are picked evenly from each enabled character set. Uses a Mersenne Twister PRNG implementation, seeded with time, no dependencies."
license = "GPL-3.0-or-later"
readme = "README.md"

repository = "https://github.com/PsychedelicShayna/genpasswd"
homepage = "https://github.com/PsychedelicShayna/genpasswd"

categories = ["command-like-applications"]
tags = ["cli", "password", "random", "generator", "mersenne twister"]


exclude = [ ".github",
  "target"
]
